# Treasure Data ChangeLog

## Jan 29, 2013: Added result output to ftp server

Now you can [send your query result to a ftp server](result-into-ftp).

## Jan 16, 2013: td v0.10.66

td v0.10.66 is released which supports new -R, --retry COUNT option on ad-hoc queries and scheduled queries. It allows you to retry failed jobs automatically and improves reliability.

## Jan 15, 2013: td-client-java v0.1.3 and td-logger-java v0.1.4

[td-client-java v0.1.3](https://github.com/treasure-data/td-client-java) and [td-logger-java v0.1.4](https://github.com/treasure-data/td-logger-java) are released to fix some bugs and upgrade versions of some dependent libraries.

## Jan 10, 2013: Added TD_LAST and TD_FIRST UDFs

Now you can use [TD_LAST](udfs#tdlast) and [TD_FIRST](udfs#tdfirst) UDFs which make your analytic queries simple.

## Jan 10, 2013: Added result output to web server

Now you can [send your query result to a web server](result-into-web).

## Oct 16, 2012: td v0.10.56

td v0.10.56 is released to allow users to download huge query result, and added compression support for the data transfer. We've also updated Windows and MacOS X [toolbelt](http://toolbelt.treasure-data.com/).

## Oct 15, 2012: td-agent v1.1.10.2

td-agent v1.1.10.2 is released to increase the stability of uploading. All platform users are recommended to upgrade to this version.

## Sep 21, 2012: td v0.10.50 for Windows and MacOS X

td v0.10.50 is released to fix some bugs, and we've updated Windows and MacOS X [toolbelt](http://toolbelt.treasure-data.com/).

## Sep 19, 2012: td-agent runs on Joyent SmartOS

Now td-agent (fluentd + td plugin) is running on Joyent SmartOS. Please check the [instruction](http://help.treasure-data.com/kb/frequently-asked-questions/installing-fluentd-td-plugin-on-joyent-smartos).

## Sep 14, 2012: Added result output to Google SpreadSheet

Now you can [write your query result into Google SpreadSheet](result-into-google-spreadsheet).

## Sep 04, 2012: td v0.10.43
