@@ -86,12 +86,13 @@ section 'query-data', 'Data Processing' do
     article 'performance-tuning', 'Performance Tuning'
   end
   category 'result', 'Output Query Results' do
-    article 'result-into-td', 'Writing the Job Result into Treasure Data'
-    article 'result-into-mysql', 'Writing the Job Result into your MySQL'
-    article 'result-into-postgresql', 'Writing the Job Result into your PostgreSQL'
-    article 'result-into-google-spreadsheet', 'Writing the Job Result into Google SpreadSheet'
-    article 'result-into-web', 'Sending the Job Result to Web Server'
-    article 'result-into-ftp', 'Sending the Job Result to FTP Server'
+    article 'result-into-td', 'Writing Job Result into Treasure Data'
+    article 'result-into-mysql', 'Writing Job Result into MySQL'
+    article 'result-into-postgresql', 'Writing Job Result into PostgreSQL'
+    article 'result-into-google-spreadsheet', 'Writing Job Result into Google SpreadSheet'
+    article 'result-into-web', 'Sending Job Result to Web Server'
+    article 'result-into-ftp', 'Sending Job Result to FTP Server'
+    article 'result-into-s3', 'Writing Job Result to S3'
     # article 'result-into-mongodb', 'Writing the Job Result into your MongoDB'
     # article 'result-into-redis', 'Writing the Job Result into your Redis'
     # article 'result-into-riak', 'Writing the Job Result into your Riak'
